[feature/#17-week] feat: 주 단위 - 일정 노출 처리, 코드 일부 보정

--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 PORT = 3000
 NODE_PATH = src/
 
-
-REACT_APP_NODE_ENV = "development"
+# React App Variables
+REACT_APP_JS_DOC_URL = "https://hkroh-nonoll.github.io/calendar-app"
