--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.5",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "moment": "^2.24.0",
+    "path": "^0.12.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -18,8 +21,9 @@
     "jsdoc": "^3.6.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node heroku.js",
+    "serve": "react-scripts start",
+    "build": "yarn run docs && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "docs": "jsdoc -c jsdoc.conf.json",
@@ -42,5 +46,10 @@
   },
   "resolutions": {
     "serialize-javascript": "^2.1.1"
+  },
+  "engines": {
+    "node": "12.14.0",
+    "npm": "6.8.0",
+    "yarn": "1.21.1"
   }
 }
